example/src/snapshots/adze_example__repetitions__tests__no_delim_long.snap
---
source: src/repetitions.rs
expression: "grammar2::parse(\"1 2 3 4 5\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            span: (
                9,
                9,
            ),
        },
    },
)
