example/src/snapshots/adze_example__repetitions__tests__no_delim_single.snap
---
source: src/repetitions.rs
expression: "grammar2::parse(\"99\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            span: (
                2,
                2,
            ),
        },
    },
)
