example/src/snapshots/adze_example__repetitions__tests__repetitions_grammar-2.snap
---
source: src/repetitions.rs
expression: "grammar::parse(\"1\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            span: (
                1,
                1,
            ),
        },
    },
)
