example/src/snapshots/adze_example__repetitions__tests__repetitions_grammar-3.snap
---
source: src/repetitions.rs
assertion_line: 77
expression: "grammar::parse(\"1, 2\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                ",",
            ),
            start: 1,
            end: 1,
        },
        ParseError {
            reason: UnexpectedToken(
                "_6",
            ),
            start: 3,
            end: 3,
        },
    ],
)
