example/src/snapshots/adze_example__repetitions__tests__repetitions_grammar.snap
---
source: src/repetitions.rs
expression: "grammar::parse(\"\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 0,
            end: 0,
        },
    ],
)
