example/src/snapshots/adze_example__repetitions__tests__repetitions_grammar2-2.snap
---
source: src/repetitions.rs
assertion_line: 83
expression: "grammar2::parse(\"1\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            span: (
                1,
                1,
            ),
        },
    },
)
