example/src/snapshots/adze_example__repetitions__tests__repetitions_grammar2-3.snap
---
source: src/repetitions.rs
expression: "grammar2::parse(\"1 2\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            span: (
                3,
                3,
            ),
        },
    },
)
