example/src/snapshots/adze_example__repetitions__tests__repetitions_grammar2.snap
---
source: src/repetitions.rs
assertion_line: 82
expression: "grammar2::parse(\"\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            span: (
                0,
                0,
            ),
        },
    },
)
