example/src/snapshots/adze_example__repetitions__tests__repetitions_grammar3-2.snap
---
source: src/repetitions.rs
assertion_line: 90
expression: "grammar3::parse(\"1,\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "_1",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                ",",
            ),
            start: 1,
            end: 1,
        },
    ],
)
