example/src/snapshots/adze_example__repetitions__tests__repetitions_grammar3-3.snap
---
source: src/repetitions.rs
expression: "grammar3::parse(\"1, 2\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "_7",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                ",",
            ),
            start: 1,
            end: 1,
        },
        ParseError {
            reason: UnexpectedToken(
                "_7",
            ),
            start: 3,
            end: 3,
        },
    ],
)
