example/src/snapshots/adze_example__repetitions__tests__repetitions_grammar3-5.snap
---
source: src/repetitions.rs
expression: "grammar3::parse(\"1,, 2,\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "_7",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                ",",
            ),
            start: 1,
            end: 1,
        },
        ParseError {
            reason: UnexpectedToken(
                ",",
            ),
            start: 2,
            end: 2,
        },
        ParseError {
            reason: UnexpectedToken(
                "_7",
            ),
            start: 4,
            end: 4,
        },
        ParseError {
            reason: UnexpectedToken(
                ",",
            ),
            start: 5,
            end: 5,
        },
    ],
)
